--- a/project.config.json
+++ b/project.config.json
@@ -25,7 +25,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.12.0",
-	"appid": "wxdd710153658f8e58",
+	"appid": "wx28853233e9d242f1",
 	"projectname": "wxApp",
 	"debugOptions": {
 		"hidedInDevtools": []
