--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
  "pages": [
-  "pages/card/card",
-  "pages/hongbao/hongbao"
+  "pages/hongbao/hongbao",
+  "pages/card/card"
  ],
  "window": {
   "backgroundTextStyle": "light",
